--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body bgcolor="lavender">
     
     <section class="profile">
-        <img src="C:\Users\AAFREEN\Desktop\project\girl.png" alt="Profile Picture">
+        <img src="girl.png" alt="Profile Picture">
         <center><h2>Mahmooda Aafreen Shaik</h2></center>
         <center><p class="about">Designing with Purpose, Developing with Heart</p></center>
         <div class="buttons">
