--- a/project2.html
+++ b/project2.html
@@ -61,7 +61,7 @@
     <section id="project">
         <h2>Project 2:  E-commerce Platform</h2>
         <p>This project involved the design and development of a comprehensive e-commerce platform that enables multiple vendors to sell their products through a unified online storefront. The platform provides a seamless shopping experience for customers and robust management tools for vendors, all while maintaining high levels of security and performance.</p>
-        <img src="C:\Users\AAFREEN\Desktop\project\ec.png" alt="Screenshot of Personal Portfolio Website">
+        <img src="ec.png" alt="Screenshot of Personal Portfolio Website">
         <a href="projects.html" class="back-link">Go back to Projects</a>
     </section>
 </body>
