--- a/project3.html
+++ b/project3.html
@@ -61,7 +61,7 @@
     <section id="project">
         <h2>Project 3: Data Visualization Dashboard</h2>
         <p>A dashboard that provides interactive data visualizations for business analytics. Developed using D3.js and integrated with a Python backend for data processing.</p>
-        <img src="C:\Users\AAFREEN\Desktop\project\dv.png" alt="Screenshot of Data Visualization Dashboard">
+        <img src="dv.png" alt="Screenshot of Data Visualization Dashboard">
         <a href="projects.html" class="back-link">Go back to Projects</a>
     </section>
 </body>
